[gd_scene load_steps=5 format=2]

[ext_resource path="res://Escenas/Cliente.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/player 1.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.4316, 17.5769 )

[node name="Cliente" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.935151, 1.87033 )
scale = Vector2( 0.025, 0.025 )
z_index = 9
frames = SubResource( 1 )
playing = true

[node name="Visibilidad" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.096857, -0.0968561 )
scale = Vector2( 0.73849, 1.00969 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.594604, -9.81096 )
shape = SubResource( 2 )

[node name="ClienteTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="screen_exited" from="Visibilidad" to="." method="_on_Visibilidad_screen_exited"]
[connection signal="timeout" from="ClienteTimer" to="." method="_on_ClienteTimer_timeout"]
